2002-11-15  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule-charset.c (charset_code_point): Fix problem about
	inheritance.

2002-11-14  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule-charset.c (decode_builtin_char): Reorganized.

2002-10-31  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* text-coding.c (char_encode_shift_jis): Modify for
	`charset_code_point'.
	(char_encode_big5): Likewise.
	(char_encode_utf8): Likewise.
	(char_encode_iso2022): Likewise.

	* mule-charset.c (charset_code_point): Add new argument
	`defined_only'.
	(Fencode_char): Add new optional argument `defined_only'.

	* chartab.c (put_char_table): Modify for `charset_code_point'.
	(map_char_table): Likewise.

	* char-ucs.h (charset_code_point): Add new argument
	`defined_only'.
	(encode_char_1): Modify for `charset_code_point'.

2002-10-30  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule-charset.c (complex_vars_of_mule_charset): Don't specify
	`MIN_CHAR_THAI' and `MAX_CHAR_THAI' for `thai-tis620'.

2002-10-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule-charset.c (Vcharset_jis_x0208): New variable in UTF-2000.
	(Qjis_x0208): Likewise.
	(decode_builtin_char): Prefer XCHARSET_MAX_CODE(charset) than
	XCHARSET_FINAL(charset).
	(charset_code_point): Modify condition for final-byte based
	builtin-chars.
	(syms_of_mule_charset): Add new symbol `=jis-x0208' in UTF-2000.
	(complex_vars_of_mule_charset): Add new coded-charset `=jis-x0208'
	in UTF-2000; specify `=jis-x0208' as the mother of
	`japanese-jisx0208-1978', `japanese-jisx0208' and
	`japanese-jisx0208-1990' in UTF-2000.

2002-10-27  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* char-ucs.h (LEADING_BYTE_JIS_X0208): New macro.

2002-07-22  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule-charset.c (charset_code_point): If CHARSET_CONVERSION is
	CONVERSION_IDENTICAL, identical conversion is used even if a CCS
	is ISO-2022 style; instead of it, CONVERSION_94, CONVERSION_96,